editors/tree-sitter-teyru/grammar.js
    source_file: $ => seq(
      optional($.package_declaration),
      repeat($.import_declaration),
      repeat($._member),
    ),

    scoped_identifier: $ => prec.right(seq(
      $.identifier,
      repeat(seq('.', $.identifier)),
    )),

    // the name of an import is its own rule so that `a.b.C` and the `a.b.*`
    // wildcard share one repetition: at a `.` the parser then never has to
    // choose between carrying on with the name and starting the `.*`.
    _type: $ => choice(
      $.primitive_type,
      $.generic_type,
      $.array_type,
      $.scoped_identifier,
    ),

    primitive_type: _ => choice(...PRIMITIVE_TYPES),

    // a type that names a class: what may follow `instanceof`, or open a
    // record pattern.  `x instanceof int` is not a thing, and leaving
    // primitives out is what keeps `x instanceof Foo` from swallowing the
    // `int` of the next statement.
    _reference_type: $ => choice(
      $.generic_type,
      $.array_type,
      $.scoped_identifier,
    ),

    // a `<` right after a type name opens its type arguments, never a
    // comparison, so this rule outranks the bare name it extends
    generic_type: $ => prec.right(1, seq(
      field('name', $.scoped_identifier),
      field('type_arguments', $.type_arguments),
    )),

    array_type: $ => prec.right(seq(
      field('element', choice($.primitive_type, $.generic_type, $.scoped_identifier)),
      repeat1(seq('[', ']')),
    )),

    type_arguments: $ => seq(
      '<',
      optional(commaSep1(choice($._type, $.wildcard))),
      '>',
    ),

    wildcard: $ => seq(
      '?',
      optional(choice(
        seq('extends', $._type),
        seq('super', $._type),
      )),
    ),

    type_parameter: $ => seq(
      repeat($.annotation),
      field('name', $.identifier),
      optional(seq('extends', $._type, repeat(seq('&', $._type)))),
    ),

    type_parameters: $ => seq(
      '<',
      commaSep1($.type_parameter),
      '>',
    ),

    // -------------------------------------------------------- declarations

    class_declaration: $ => prec.right(seq(
      repeat($.annotation),
      optional($.modifiers),
      'class',
      field('name', $.identifier),
      optional($.type_parameters),
      optional($.superclass),
      optional($.super_interfaces),
      optional($.permits_clause),
      optional($.class_body),
    )),

    modifiers: $ => repeat1(choice(...MODIFIERS)),

    class_body: $ => seq('{', repeat($._member), '}'),

    _member: $ => choice(
      $._type_declaration,
      $.field_declaration,
      // a property: the `{ get ... set ... }` that follows a field
      // declaration.  It is a member of its own so that a field declaration
      // is never left guessing whether a `{` starts an accessor block or an
      // instance initializer; see the conflict below.
      $.accessor_block,
      $.method_declaration,
      $.constructor_declaration,
      $.static_initializer,
      $.instance_initializer,
    ),

    field_declaration: $ => seq(
      repeat($.annotation),
      optional($.modifiers),
      field('type', $._type),
      commaSep1(field('declarator', $.variable_declarator)),
    ),

    variable_declarator: $ => seq(
      field('name', $.identifier),
      repeat(seq('[', ']')),
      optional(seq('=', field('value', choice($.array_initializer, $._expression)))),
    ),

    method_declaration: $ => prec.right(seq(...methodShape($))),

    // an element of an `@interface` body that carries a `default` value: the
    // same shape as a method, plus the clause.  `default` only exists there
    // (`parseMemberAfterMods` checks the enclosing declaration kind first), so
    // keeping the clause out of `method_declaration` is what makes
    // `default String kind() { ... }` in an ordinary interface read as a
    // method rather than as the tail of the one before it
    formal_parameters: $ => seq('(', optional(commaSep1($.formal_parameter)), ')'),

    formal_parameter: $ => seq(
      repeat($.annotation),
      optional($.modifiers),
      field('type', $._type),
      optional('...'),
      field('name', choice($.identifier, 'this')),
      repeat(seq('[', ']')),
    ),

    // ---------------------------------------------------------- statements

    block: $ => seq('{', repeat($._statement), '}'),

    _statement: $ => choice(
      $.block,
      $.local_variable_declaration,
      $.expression_statement,
      $.if_statement,
      $.while_statement,
      $.do_statement,
      $.for_statement,
      $.enhanced_for_statement,
      $.return_statement,
      $.break_statement,
      $.continue_statement,
      $.throw_statement,
      $.assert_statement,
      $.synchronized_statement,
      $.try_statement,
      $._type_declaration,
      $.labeled_statement,
    ),

    // `yield` is only legal in a switch case body, which is also the only
    // place the compiler's lookahead check (`yield = x` is an assignment to a
    // variable named `yield`) admits the keyword
    local_variable_declaration: $ => prec.dynamic(1, seq(
      repeat($.annotation),
      optional($.modifiers),
      field('type', $._type),
      commaSep1(field('declarator', $.variable_declarator)),
    )),

    // a statement that is just an expression; `switch` reaches this rule
    // through `_expression`
    expression_statement: $ => choice(
      $.assignment_expression,
      $.lambda_expression,
      $.ternary_expression,
      $.binary_expression,
      $.instanceof_expression,
      $.unary_expression,
      $.update_expression,
      $.cast_expression,
      $.switch_construct,
      $._postfix_expression,
    ),

    if_statement: $ => prec.right(seq(
      'if',
      field('condition', $.parenthesized_expression),
      field('consequence', $._statement),
      optional(seq('else', field('alternative', $._statement))),
    )),

    type_pattern: $ => seq(
      optional('final'),
      field('type', $._type),
      field('name', $.identifier),
    ),

    // `Type(...)` in a case label.  The type is a plain name so that the `(`
    // can be shifted without first reducing a scoped name: that is what keeps
    // this reading alive in the GLR fork with `call(...)`.  The body is its
    // own rule because the conflict above names it.
    return_statement: $ => prec.right(seq('return', optional(field('value', $._expression)))),

    _expression: $ => choice(
      $.lambda_expression,
      $.assignment_expression,
      $.ternary_expression,
      $.binary_expression,
      $.instanceof_expression,
      $.unary_expression,
      $.update_expression,
      $.cast_expression,
      $.switch_construct,
      $._postfix_expression,
    ),

    parenthesized_expression: $ => seq('(', $._expression, ')'),

    assignment_expression: $ => prec.right(PREC.ASSIGN, seq(
      field('left', $._lhs),
      field('operator', choice(...ASSIGN_OPERATORS)),
      field('right', $._expression),
    )),

    ternary_expression: $ => prec.right(PREC.TERNARY, seq(
      field('condition', $._expression),
      '?',
      field('consequence', choice($._expression, $.lambda_expression)),
      ':',
      field('alternative', choice($._expression, $.lambda_expression)),
    )),

    binary_expression: $ => choice(...BINARY_OPERATORS.map(([operator, precedence]) =>
      prec.left(precedence, seq(
        field('left', $._expression),
        field('operator', operator),
        field('right', $._expression),
      )))),

    // `x instanceof T`, `x instanceof T t`, `x instanceof T(...)`
    instanceof_expression: $ => prec(PREC.RELATIONAL, seq(
      field('left', $._expression),
      'instanceof',
      choice(
        field('type', $._reference_type),
        $.type_pattern,
        $.record_pattern,
      ),
    )),

    unary_expression: $ => choice(
      ...[['+', PREC.UNARY], ['-', PREC.UNARY], ['!', PREC.UNARY], ['~', PREC.UNARY]].map(
        ([operator, precedence]) => prec.left(precedence, seq(
          field('operator', operator),
          field('operand', $._unary_expression),
        )),
      ),
    ),

    update_expression: $ => choice(
      prec.left(PREC.UNARY, seq(
        field('operator', choice('++', '--')),
        field('operand', $._unary_expression),
      )),
      prec.left(PREC.POSTFIX, seq(
        field('operand', $._postfix_expression),
        field('operator', choice('++', '--')),
      )),
    ),

    // like `tryCast`: after a cast to a *primitive* type the operand is read
    // with no lookahead check, so `(byte) -128` is legal; after a cast to a
    // reference type the operand may not start with `+` or `-`
    cast_expression: $ => prec(PREC.CAST, choice(
      seq(
        '(',
        field('type', $.primitive_type),
        ')',
        field('value', choice($._unary_expression, $.lambda_expression)),
      ),
      seq(
        '(',
        field('type', $._reference_type),
        ')',
        field('value', choice($._unary_expression_not_plus_minus, $.lambda_expression)),
      ),
    )),

    _unary_expression: $ => choice(
      $.unary_expression,
      $.update_expression,
      $.cast_expression,
      $._postfix_expression,
    ),

    // like `tryCast`, the operand of a cast may not start with `+` or `-`
    _unary_expression_not_plus_minus: $ => choice(
      $.update_expression,
      $.cast_expression,
      $._postfix_expression,
    ),

    _postfix_expression: $ => choice(
      $._primary_expression,
      $.field_access,
      $.method_invocation,
      $.array_access,
      $.method_reference,
      $.class_literal,
      $.qualified_this,
      $.qualified_super_call,
      $.inner_class_creation,
    ),

    this_expression: _ => 'this',

    qualified_this: $ => prec(PREC.POSTFIX, seq(
      field('class', $._type),
      '.',
      'this',
    )),

    qualified_super_call: $ => prec(PREC.POSTFIX, seq(
      field('class', $._type),
      '.',
      'super',
      '.',
      field('name', $.identifier),
      field('arguments', $.argument_list),
    )),

    field_access: $ => prec.right(PREC.POSTFIX, seq(
      field('object', $._postfix_expression),
      '.',
      field('field', $.identifier),
    )),

    method_invocation: $ => prec(PREC.POSTFIX, choice(
      seq(field('name', $.identifier), field('arguments', $.argument_list)),
      seq(
        field('object', $._postfix_expression),
        '.',
        optional(field('type_arguments', $.type_arguments)),
        field('name', $.identifier),
        field('arguments', $.argument_list),
      ),
    )),

    array_access: $ => prec(PREC.POSTFIX, seq(
      field('array', $._postfix_expression),
      '[',
      field('index', $._expression),
      ']',
    )),

    method_reference: $ => prec(PREC.POSTFIX, choice(
      seq(
        field('object', $._postfix_expression),
        '::',
        optional(field('type_arguments', $.type_arguments)),
        field('name', choice($.identifier, 'new')),
      ),
      seq(field('type', $._type), '::', field('name', choice($.identifier, 'new'))),
      seq(field('type', $._type), '[', ']', '::', 'new'),
    )),

    // `outer.new Inner()`
    object_creation_expression: $ => prec.right(PREC.UNARY, seq(
      'new',
      field('type', choice($.generic_type, $.scoped_identifier)),
      field('arguments', $.argument_list),
      optional($.class_body),
    )),

    // `new int[3][]` keeps growing to the right, so a `[` right after the
    // creation belongs to the creation and not to an array access on it
    array_creation_expression: $ => prec.right(seq(
      'new',
      field('type', choice($.primitive_type, $.generic_type, $.scoped_identifier)),
      repeat1(seq('[', optional(field('size', $._expression)), ']')),
      optional(field('value', $.array_initializer)),
    )),

    array_initializer: $ => seq(
      '{',
      optional(seq(commaSep1($._array_initializer_value), optional(','))),
      '}',
    ),

    _array_initializer_value: $ => choice($.array_initializer, $._expression),

    // `A(...)`: inside an enum body this is the argument list of an enum
    // constant, not the parameter list of a constructor named `A`
    argument_list: $ => prec(1, seq('(', optional(commaSep1($._expression)), ')')),

    _lhs: $ => choice($.identifier, $.field_access, $.array_access),

    // ------------------------------------------------------------ literals

    decimal_integer_literal: _ => /[0-9][0-9_]*[lL]?/,
    decimal_floating_point_literal: _ => choice(
      /[0-9][0-9_]*\.[0-9][0-9_]*([eE][+-]?[0-9][0-9_]*)?[fFdD]?/,
      /[0-9][0-9_]*[eE][+-]?[0-9][0-9_]*[fFdD]?/,
      /[0-9][0-9_]*[fFdD]/,
      // `.5`: internal/lexer starts a number at a digit, or at a `.` followed
      // by one
      /\.[0-9][0-9_]*([eE][+-]?[0-9][0-9_]*)?[fFdD]?/,
    ),
    string_literal: _ => token(seq(
      '"',
      repeat(choice(/[^"\\\n\r]/, /\\([^u\n\r]|u[0-9a-fA-F]{4})/)),
      '"',
    )),
    // a text block runs to the first `"""`, so the body may hold single
    // quotes and pairs of quotes but never three in a row
    identifier: _ => /[a-zA-Z_$\u00A1-\uFFFF][a-zA-Z0-9_$\u00A1-\uFFFF]*/,
