editors/tree-sitter-teyru/test/corpus/expressions.txt
==================
binary operators and precedence
==================

class C {
  int f(int a, int b) {
    int x = a + b * 2 - 1
    int y = a < b && b > 0 || a != 0
    int z = a & b | a ^ b
    int s = a << 2 >> 1 >>> 3
    int m = a % b / 2
    return x + y + z + s + m
  }
}

---

(source_file
  (class_declaration
    (identifier)
    (class_body
      (method_declaration
        (primitive_type)
        (identifier)
        (formal_parameters
          (formal_parameter
            (primitive_type)
            (identifier))
          (formal_parameter
            (primitive_type)
            (identifier)))
        (block
          (local_variable_declaration
            (primitive_type)
            (variable_declarator
              (identifier)
              (binary_expression
                (binary_expression
                  (identifier)
                  (binary_expression
                    (identifier)
                    (decimal_integer_literal)))
                (decimal_integer_literal))))
          (local_variable_declaration
            (primitive_type)
            (variable_declarator
              (identifier)
              (binary_expression
                (binary_expression
                  (binary_expression
                    (identifier)
                    (identifier))
                  (binary_expression
                    (identifier)
                    (decimal_integer_literal)))
                (binary_expression
                  (identifier)
                  (decimal_integer_literal)))))
          (local_variable_declaration
            (primitive_type)
            (variable_declarator
              (identifier)
              (binary_expression
                (binary_expression
                  (identifier)
                  (identifier))
                (binary_expression
                  (identifier)
                  (identifier)))))
          (local_variable_declaration
            (primitive_type)
            (variable_declarator
              (identifier)
              (binary_expression
                (binary_expression
                  (binary_expression
                    (identifier)
                    (decimal_integer_literal))
                  (decimal_integer_literal))
                (decimal_integer_literal))))
          (local_variable_declaration
            (primitive_type)
            (variable_declarator
              (identifier)
              (binary_expression
                (binary_expression
                  (identifier)
                  (identifier))
                (decimal_integer_literal))))
          (return_statement
            (binary_expression
              (binary_expression
                (binary_expression
                  (binary_expression
                    (identifier)
                    (identifier))
                  (identifier))
                (identifier))
              (identifier))))))))

==================
unary, ternary and assignment operators
==================

class C {
  int f(int a, boolean flag) {
    a++
    --a
    int b = -a
    int c = +a
    boolean d = !flag
    int e = ~a
    int g = flag ? a : -a
    a += 1
    a -= 1
    a *= 2
    a /= 2
    a %= 2
    a &= 1
    a |= 1
    a ^= 1
    a <<= 1
    a >>= 1
    a >>>= 1
    return g
  }
}

---

(source_file
  (class_declaration
    (identifier)
    (class_body
      (method_declaration
        (primitive_type)
        (identifier)
        (formal_parameters
          (formal_parameter
            (primitive_type)
            (identifier))
          (formal_parameter
            (primitive_type)
            (identifier)))
        (block
          (expression_statement
            (update_expression
              (identifier)))
          (expression_statement
            (update_expression
              (identifier)))
          (local_variable_declaration
            (primitive_type)
            (variable_declarator
              (identifier)
              (unary_expression
                (identifier))))
          (local_variable_declaration
            (primitive_type)
            (variable_declarator
              (identifier)
              (unary_expression
                (identifier))))
          (local_variable_declaration
            (primitive_type)
            (variable_declarator
              (identifier)
              (unary_expression
                (identifier))))
          (local_variable_declaration
            (primitive_type)
            (variable_declarator
              (identifier)
              (unary_expression
                (identifier))))
          (local_variable_declaration
            (primitive_type)
            (variable_declarator
              (identifier)
              (ternary_expression
                (identifier)
                (identifier)
                (unary_expression
                  (identifier)))))
          (expression_statement
            (assignment_expression
              (identifier)
              (decimal_integer_literal)))
          (expression_statement
            (assignment_expression
              (identifier)
              (decimal_integer_literal)))
          (expression_statement
            (assignment_expression
              (identifier)
              (decimal_integer_literal)))
          (expression_statement
            (assignment_expression
              (identifier)
              (decimal_integer_literal)))
          (expression_statement
            (assignment_expression
              (identifier)
              (decimal_integer_literal)))
          (expression_statement
            (assignment_expression
              (identifier)
              (decimal_integer_literal)))
          (expression_statement
            (assignment_expression
              (identifier)
              (decimal_integer_literal)))
          (expression_statement
            (assignment_expression
              (identifier)
              (decimal_integer_literal)))
          (expression_statement
            (assignment_expression
              (identifier)
              (decimal_integer_literal)))
          (expression_statement
            (assignment_expression
              (identifier)
              (decimal_integer_literal)))
          (expression_statement
            (assignment_expression
              (identifier)
              (decimal_integer_literal)))
          (return_statement
            (identifier)))))))

==================
casts
==================

class C {
  long f(Object o) {
    byte b = (byte) -128
    short s = (short) -32768
    int i = (int) 1.5
    long l = (long) 1.5
    String t = (String) o
    int[] arr = (int[]) o
    return (long) -b - s - i - l + t.length() + arr.length
  }
}

---

(source_file
  (class_declaration
    (identifier)
    (class_body
      (method_declaration
        (primitive_type)
        (identifier)
        (formal_parameters
          (formal_parameter
            (scoped_identifier
              (identifier))
            (identifier)))
        (block
          (local_variable_declaration
            (primitive_type)
            (variable_declarator
              (identifier)
              (cast_expression
                (primitive_type)
                (unary_expression
                  (decimal_integer_literal)))))
          (local_variable_declaration
            (primitive_type)
            (variable_declarator
              (identifier)
              (cast_expression
                (primitive_type)
                (unary_expression
                  (decimal_integer_literal)))))
          (local_variable_declaration
            (primitive_type)
            (variable_declarator
              (identifier)
              (cast_expression
                (primitive_type)
                (decimal_floating_point_literal))))
          (local_variable_declaration
            (primitive_type)
            (variable_declarator
              (identifier)
              (cast_expression
                (primitive_type)
                (decimal_floating_point_literal))))
          (local_variable_declaration
            (scoped_identifier
              (identifier))
            (variable_declarator
              (identifier)
              (parenthesized_expression
                (identifier))))
          (expression_statement
            (identifier))
          (local_variable_declaration
            (array_type
              (primitive_type))
            (variable_declarator
              (identifier)
              (cast_expression
                (array_type
                  (primitive_type))
                (identifier))))
          (return_statement
            (binary_expression
              (binary_expression
                (binary_expression
                  (binary_expression
                    (binary_expression
                      (cast_expression
                        (primitive_type)
                        (unary_expression
                          (identifier)))
                      (identifier))
                    (identifier))
                  (identifier))
                (method_invocation
                  (identifier)
                  (identifier)
                  (argument_list)))
              (field_access
                (identifier)
                (identifier)))))))))

==================
instanceof: a bare type and a binding
==================

class C {
  int f(Object o) {
    if (o instanceof String) {
      return 1
    }
    if (o instanceof String s) {
      return s.length()
    }
    return o instanceof Integer i ? i : 0
  }
}

---

(source_file
  (class_declaration
    (identifier)
    (class_body
      (method_declaration
        (primitive_type)
        (identifier)
        (formal_parameters
          (formal_parameter
            (scoped_identifier
              (identifier))
            (identifier)))
        (block
          (if_statement
            (parenthesized_expression
              (instanceof_expression
                (identifier)
                (scoped_identifier
                  (identifier))))
            (block
              (return_statement
                (decimal_integer_literal))))
          (if_statement
            (parenthesized_expression
              (instanceof_expression
                (identifier)
                (type_pattern
                  (scoped_identifier
                    (identifier))
                  (identifier))))
            (block
              (return_statement
                (method_invocation
                  (identifier)
                  (identifier)
                  (argument_list)))))
          (return_statement
            (instanceof_expression
              (identifier)
              (scoped_identifier
                (identifier))))
          (expression_statement
            (ternary_expression
              (identifier)
              (identifier)
              (decimal_integer_literal))))))))

==================
field access, method invocation and array access
==================

class C {
  int f(int[] xs) {
    System.out.println("hi")
    int n = xs.length
    int a = xs[0]
    int b = xs[n - 1]
    String s = new String("x")
    return s.length() + a + b
  }
}

---

(source_file
  (class_declaration
    (identifier)
    (class_body
      (method_declaration
        (primitive_type)
        (identifier)
        (formal_parameters
          (formal_parameter
            (array_type
              (primitive_type))
            (identifier)))
        (block
          (expression_statement
            (method_invocation
              (field_access
                (identifier)
                (identifier))
              (identifier)
              (argument_list
                (string_literal))))
          (local_variable_declaration
            (primitive_type)
            (variable_declarator
              (identifier)
              (field_access
                (identifier)
                (identifier))))
          (local_variable_declaration
            (primitive_type)
            (variable_declarator
              (identifier)
              (array_access
                (identifier)
                (decimal_integer_literal))))
          (local_variable_declaration
            (primitive_type)
            (variable_declarator
              (identifier)
              (array_access
                (identifier)
                (binary_expression
                  (identifier)
                  (decimal_integer_literal)))))
          (local_variable_declaration
            (scoped_identifier
              (identifier))
            (variable_declarator
              (identifier)
              (object_creation_expression
                (scoped_identifier
                  (identifier))
                (argument_list
                  (string_literal)))))
          (return_statement
            (binary_expression
              (binary_expression
                (method_invocation
                  (identifier)
                  (identifier)
                  (argument_list))
                (identifier))
              (identifier))))))))

==================
new: objects, arrays and anonymous classes
==================

class C {
  void f() {
    Point p = new Point(1, 2)
    int[] xs = new int[3]
    int[][] jagged = new int[2][]
    int[] init = {1, 2, 3}
    Runnable r = new Runnable() {
      public void run() {
        System.out.println("run")
      }
    }
  }
}

---

(source_file
  (class_declaration
    (identifier)
    (class_body
      (method_declaration
        (primitive_type)
        (identifier)
        (formal_parameters)
        (block
          (local_variable_declaration
            (scoped_identifier
              (identifier))
            (variable_declarator
              (identifier)
              (object_creation_expression
                (scoped_identifier
                  (identifier))
                (argument_list
                  (decimal_integer_literal)
                  (decimal_integer_literal)))))
          (local_variable_declaration
            (array_type
              (primitive_type))
            (variable_declarator
              (identifier)
              (array_creation_expression
                (primitive_type)
                (decimal_integer_literal))))
          (local_variable_declaration
            (array_type
              (primitive_type))
            (variable_declarator
              (identifier)
              (array_creation_expression
                (primitive_type)
                (decimal_integer_literal))))
          (local_variable_declaration
            (array_type
              (primitive_type))
            (variable_declarator
              (identifier)
              (array_initializer
                (decimal_integer_literal)
                (decimal_integer_literal)
                (decimal_integer_literal))))
          (local_variable_declaration
            (scoped_identifier
              (identifier))
            (variable_declarator
              (identifier)
              (object_creation_expression
                (scoped_identifier
                  (identifier))
                (argument_list)
                (class_body
                  (method_declaration
                    (modifiers)
                    (primitive_type)
                    (identifier)
                    (formal_parameters)
                    (block
                      (expression_statement
                        (method_invocation
                          (field_access
                            (identifier)
                            (identifier))
                          (identifier)
                          (argument_list
                            (string_literal)))))))))))))))

==================
a qualified this, a qualified super call and a method reference
==================

class Outer {
  class Inner {
    int x

    int f() {
      return Outer.this
    }

    void g() {
      Outer.super.toString()
      Object o = this::f
      Object p = Outer::new
      Object q = String::valueOf
    }
  }
}

---

(source_file
  (class_declaration
    (identifier)
    (class_body
      (class_declaration
        (identifier)
        (class_body
          (field_declaration
            (primitive_type)
            (variable_declarator
              (identifier)))
          (method_declaration
            (primitive_type)
            (identifier)
            (formal_parameters)
            (block
              (return_statement
                (qualified_this
                  (scoped_identifier
                    (identifier))))))
          (method_declaration
            (primitive_type)
            (identifier)
            (formal_parameters)
            (block
              (expression_statement
                (qualified_super_call
                  (scoped_identifier
                    (identifier))
                  (identifier)
                  (argument_list)))
              (local_variable_declaration
                (scoped_identifier
                  (identifier))
                (variable_declarator
                  (identifier)
                  (method_reference
                    (this_expression)
                    (identifier))))
              (local_variable_declaration
                (scoped_identifier
                  (identifier))
                (variable_declarator
                  (identifier)
                  (method_reference
                    (identifier))))
              (local_variable_declaration
                (scoped_identifier
                  (identifier))
                (variable_declarator
                  (identifier)
                  (method_reference
                    (identifier)
                    (identifier)))))))))))
